--- a/Uleadz.StaticWeb/Pages/Shared/_Footer.cshtml
+++ b/Uleadz.StaticWeb/Pages/Shared/_Footer.cshtml
@@ -1,4 +1,4 @@
-﻿<footer class="border-top footer text-muted">
+﻿<footer class=" footer text-muted">
     <div class="container-center-horizontal">
         <div class="homepage screen">
             <div class="footer">
