--- a/Uleadz.StaticWeb/Pages/Shared/_IndustriesLocksmithMobile.cshtml
+++ b/Uleadz.StaticWeb/Pages/Shared/_IndustriesLocksmithMobile.cshtml
@@ -34,7 +34,7 @@
             </div>
         </div>
         <div class="group-1804">
-            <div class="overlap-group3">
+            <div class="overlap-group3 side" id="features">
                 <div class="rectangle-226"></div>
                 <div class="suitable-for-over-30 poppins-medium-hunter-green-28px">
                     Suitable for over 30<br />different industries
@@ -49,10 +49,10 @@
                         Android, and your favorite web <br />browser, you can run your business from<br />anywhere easily.
                     </span>
                 </p>
-                <div class="group-1803 side-1">
-                    <a href="#" class="next"><img class="arrow-2222" src="/lib/img/arrow-right-3@2x.svg"></a>
-                    <a href="#" class="prev"><img class="arrow-1111" src="/lib/img/arrow-right-4@2x.svg"></a>
-                    <div class="group-575 pagination">
+                <div class="group-1803 paginations">
+                    <a id="next" class="next"><img class="arrow-2222" src="/lib/img/arrow-right-3@2x.svg"></a>
+                    <a id="prev" class="prev"><img class="arrow-1111" src="/lib/img/arrow-right-4@2x.svg"></a>
+                    <div class="group-575 pagination" data-index="first">
                         <div class="group-574 ">
                             <div class="group-642"><img class="coins2-5-1" src="~/lib/img/coins2-5-11@2x.png" /></div>
                             <div class="easy-to-use-software-for-contractors poppins-normal-black-20px">
@@ -104,7 +104,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="group-578 pagination">
+                    <div class="group-578 pagination" data-index="last">
                         <div class="group-574-3">
                             <div class="overlap-group-3"><img class="coins2-5" src="~/lib/img/coins2-5-13@2x.png" /></div>
                             <div class="give-your-locksmith poppins-normal-black-20px">
