--- a/Uleadz.StaticWeb/Pages/Shared/_WhyUleadzMobile.cshtml
+++ b/Uleadz.StaticWeb/Pages/Shared/_WhyUleadzMobile.cshtml
@@ -38,15 +38,15 @@
                 <img class="book-4" src="~/lib/img/book-4-8@2x.png" />
             </div>
         </div>
-        <div class="group-container side-1">
-            <div class="overlap-group21">
-            <a href="#" class="next"><img class="arrow-222" src="/lib/img/arrow-right-3@2x.svg"></a>
-            <a href="#" class="prev"><img class="arrow-111" src="/lib/img/arrow-right-4@2x.svg"></a>
+        <div class="group-container side" id="features">
+            <div class="overlap-group21 paginations">
+            <a id="next" class="next"><img class="arrow-222" src="/lib/img/arrow-right-3@2x.svg"></a>
+            <a id="prev" class="prev"><img class="arrow-111" src="/lib/img/arrow-right-4@2x.svg"></a>
                 <div class="rectangle-181"></div>
                 <div class="packed-with-features poppins-medium-black-28px">
                     Packed With Features<br />For Your Home Service<br />Business
                 </div>
-                <div class="overlap-group4 pagination">
+                <div class="overlap-group4 pagination" data-index="first">
                     <img class="purse-1" src="~/lib/img/purse-1-2@2x.png" />
                     <div class="job-profitability poppins-medium-black-26px">Job Profitability</div>
                     <p class="estimates-invoices poppins-normal-black-14px">
@@ -71,14 +71,14 @@
                         Communications
                     </p>
                 </div>
-                @*<div class="overlap-group5">
+                <div class="overlap-group4 pagination" data-index="last">
                 <img class="purse-2" src="~/lib/img/purse-2-3@2x.png" />
                 <div class="customer-management poppins-medium-black-26px">Customer<br />Management</div>
                 <p class="scheduling-dispatc poppins-normal-black-14px">
                     Scheduling &amp; Dispatch<br />Route Planning<br />Job Profitability<br />Mobile &amp; Email Payments<br />Square
                     Integration
                 </p>
-            </div>*@
+            </div>
             </div>
 
             <div class="overlap-group1-1">
@@ -127,15 +127,15 @@
                 </div>
             </div>
             <img class="mask-group" src="~/lib/img/mask-group-6@2x.png" />
-            <div class="group-container-1  side-11">
-                <div class="overlap-group24">
-                    <a href="#" class="next"><img class="arrow-222" src="/lib/img/arrow-right-3@2x.svg"></a>
-                    <a href="#" class="prev"><img class="arrow-111" src="/lib/img/arrow-right-4@2x.svg"></a>
+            <div class="group-container-1  side" id="features">
+                <div class="overlap-group24 paginations">
+                    <a id="next" class="next"><img class="arrow-222" src="/lib/img/arrow-right-3@2x.svg"></a>
+                    <a id="prev" class="prev"><img class="arrow-111" src="/lib/img/arrow-right-4@2x.svg"></a>
                     <div class="rectangle-182"></div>
                     <div class="benefits-of-uleadz-f poppins-medium-black-28px">
                         Benefits of Uleadz<br />Field Management<br />Software
                     </div>
-                    <div class="group-1768 pagination">
+                    <div class="group-1768 pagination" data-index="first">
                         <div class="group-528">
                             <img class="graphic_1-1-9" src="~/lib/img/graphic-1-1-9-1@2x.png" />
                             <p class="a-field-service-mana poppins-normal-black-14px">
@@ -146,7 +146,7 @@
                         </div>
                     </div>
                     @*copy*@
-                    <div class="group-1768 pagination">
+                    <div class="group-1768 pagination" data-index="last">
                         <div class="group-528">
                             <img class="graphic_1-1-9" src="~/lib/img/graphic-1-1-9-1@2x.png" />
                             <p class="a-field-service-mana poppins-normal-black-14px">
