--- a/Uleadz.StaticWeb/wwwroot/css/app/homepage.css
+++ b/Uleadz.StaticWeb/wwwroot/css/app/homepage.css
@@ -1078,7 +1078,7 @@
   display: flex;
   height: 691px;
   margin-left: 2.0px;
-  margin-top: 162px;
+/*  margin-top: 162px;*/
   min-width: 1368px;
 }
 
