--- a/Uleadz.StaticWeb/wwwroot/css/app/about-us-mobile.css
+++ b/Uleadz.StaticWeb/wwwroot/css/app/about-us-mobile.css
@@ -7,7 +7,7 @@
   flex-direction: column;
 /*  height: 3995px;*/
   overflow: hidden;
-  padding: 30px 0;
+/*  padding: 30px 0;*/
   width: 375px;
 }
 
