--- a/Uleadz.StaticWeb/wwwroot/css/app/pricing-v2-mobile.css
+++ b/Uleadz.StaticWeb/wwwroot/css/app/pricing-v2-mobile.css
@@ -6,7 +6,7 @@
     display: flex;
     flex-direction: column;
     overflow: hidden;
-    padding: 30px 0;
+/*    padding: 30px 0;*/
     width: 375px;
 }
 
