--- a/Uleadz.StaticWeb/wwwroot/css/app/why-uleadz.css
+++ b/Uleadz.StaticWeb/wwwroot/css/app/why-uleadz.css
@@ -6,7 +6,7 @@
     display: flex;
     flex-direction: column;
     overflow: hidden;
-    padding: 33px 0;
+/*    padding: 33px 0;*/
     width: 1366px;
 }
 
