--- a/Uleadz.StaticWeb/Pages/Shared/HomePage/_HomePageMobile.cshtml
+++ b/Uleadz.StaticWeb/Pages/Shared/HomePage/_HomePageMobile.cshtml
@@ -44,28 +44,42 @@
                 <div class="overlap-group-1">
                     <div class="rectangle-171"></div>
                     <div class="enhance-your-management-team poppins-medium-black-20px">
-                        Enhance your<br />management team
+                        Record everysingle call<br/>
+                        Yours and your team
                     </div>
                     <p class="maximize-your-manage poppins-normal-black-14px">
-                        Maximize your management team’s<br />output by centralizing all of your data<br />and business
-                        processes. Create powerful<br />reports with customizable dashboards,<br />manage your assets
-                        seamlessly,
+                        With our call secure feature, every
+                        incoming and outgoing call will be
+                        recorded to guarantee your team
+                        is following your quality standards.
+                        Simply click on the job and the recording
+                        will be there to access at any time.
                     </p>
                     <img class="graphic_1-1-1" src="~/lib/img/graphic-1-1-1-3@2x.png" />
                 </div>
                 <div class="overlap-group1">
                     <img class="graphic_1-1-2" src="~/lib/img/graphic-1-1-2-3@2x.png" />
-                    <div class="set-jobs-up-for-success poppins-medium-black-20px">Set jobs up for success</div>
+                    <div class="set-jobs-up-for-success poppins-medium-black-20px">Telephone lines included</div>
                     <p class="easily-manage-hundre poppins-normal-black-14px">
-                        Easily manage hundreds of jobs at a<br />time&nbsp;&nbsp;and set them up to make a profit.
+                        Uleadz software has  an integratd phone
+                        with full ability to make and receive calls
+                        texts and record every single one fot he,
+                        You can have 1,2 or 20 different phone
+                        numebrs with different areacodes.
                     </p>
                 </div>
                 <div class="overlap-group2">
                     <img class="graphic_1-1-3" src="~/lib/img/graphic-1-1-3-3@2x.png" />
                     <div class="invoice-and-get-paid poppins-medium-black-20px">Invoice and Get Paid</div>
                     <p class="uleadz-field-service poppins-normal-black-14px">
-                        Uleadz field service management<br />software makes it easy to take payments<br />in the field, track
-                        invoices and make sure<br />you collect the money you’re owed.
+                        Uleadz software has  an integrated phone
+                        with full ability to make and receive calls,
+                        texts and record every single one for them.
+                        You can have 1, 2, or 20 different phone
+                        numbers with different area codes.
+                        Accessible, affordable, contract-free,<br/>
+                        hassle-free phone lines for you and
+                        your team.
                     </p>
                 </div>
                 <a href="#">
@@ -87,9 +101,11 @@
         </div>
         <div class="group-1763">
             <p class="lorem-ipsum-dolor-si poppins-normal-black-14px">
-                Lorem ipsum dolor sit amet, consectetur<br />adipiscing elit, sed do eiusmod tempor<br />incididunt ut
-                labore et dolore magna aliqua.<br />Ut enim ad minim veniam, quis nostrud<br />exercitation ullamco laboris
-                nisi ut aliquip ex<br />ea commodo consequat.
+                Uleadz not only makes your business data fancy, well organized and
+                easy to acess, it will also manage your agenda, remind you of jobs
+                and customer needs, alert you and your team of recently assigned jobs.
+                It like having a secretary withou sick days!
+
             </p>
             <div class="group-1760">
                 <div class="group-282"><img class="friends" src="~/lib/img/friends-9@2x.png" /></div>
