--- a/Uleadz.StaticWeb/Pages/Shared/_AboutUs.cshtml
+++ b/Uleadz.StaticWeb/Pages/Shared/_AboutUs.cshtml
@@ -1,7 +1,8 @@
 ﻿<div class="about-us screen">
     <div class="overlap-group6">
         <div class="the-need-for-field-management-solutions poppins-medium-black-40px">
-            The Need For Field<br />Management Solutions
+            We understand what you<br/>
+            need in the field, let us help.
         </div>
         <div class="overlap-group7">
             <div class="overlap-group5">
@@ -37,10 +38,9 @@
                 <img class="supercup-1" src="~/lib/img/supercup-1@2x.png" />
             </div>
             <p class="in-2018-the-ucallz-e poppins-normal-black-15px">
-                In 2018 the Ucallz entrepreneurs identified a significant unmet need in the US home services market –<br /><br />
-                A lack of designated contact center solutions and workflow management solutions for small home service
-                providers (plumbers, constructors,&nbsp;&nbsp;electricians, locksmiths, appliance repairers, carpet
-                cleaners, garage door repairers, exterminators, gardeners, etc.)
+                We have partnered up with the #1 Call Answering service in America, Ucallz. In 2018 the Ucallz team identified a significant unmet need in the US home services market – <br/> <br/>
+
+                A lack of designated contact center and workflow management solutions for small and medium  home service providers (plumbers, constructors,  electricians, locksmiths, appliance repairers, carpet cleaners, garage door repairers, exterminators, gardeners, etc.) Our partnership has unveiled amazing knowledge to identify the very changing industry, adapt and pass that experience to our customers and associates, Giving birth to our fantastic state fo the art platform.
             </p>
         </div>
     </div>
@@ -53,10 +53,12 @@
                 <div class="flex-col-1">
                     <div class="testimonial poppins-normal-black-14px">TESTIMONIAL</div>
                     <div class="you-get-more-than-what-you-pay-for poppins-medium-black-50px">
-                        You get more than what<br />you pay for
+                        We want your business to stride<br/>
+                        and always succeed
                     </div>
                     <p class="we-will-take-care-of-everything-else poppins-normal-black-16px">
-                        We will take care of everything else
+                        We will make sure your money is well worth the investment and take care of you<br/>
+                        every step of the way.
                     </p>
                 </div>
                 <div class="overlap-group-1">
