--- a/Uleadz.StaticWeb/Pages/Shared/_AboutUsMobile.cshtml
+++ b/Uleadz.StaticWeb/Pages/Shared/_AboutUsMobile.cshtml
@@ -2,14 +2,13 @@
     <div class="about-us-mobile screen">
       
         <div class="the-need-for-field-management-solutions poppins-semi-bold-black-34px">
-            The Need For Field<br />Management<br />Solutions
+            We understand what you<br/>
+            need in the field, let us help.
         </div>
         <p class="in-2018-the-ucallz-e poppins-normal-black-14px">
-            In 2018 the Ucallz entrepreneurs identified a<br />significant unmet need in the US home services<br />market
-            –<br /><br />
-            A lack of designated contact center<br />solutions and workflow management solutions<br />for small home
-            service providers (plumbers,<br />constructors,&nbsp;&nbsp;electricians, locksmiths, appliance<br />repairers,
-            carpet cleaners, garage door repairers,<br />exterminators, gardeners, etc.)
+            We have partnered up with the #1 Call Answering service in America, Ucallz. In 2018 the Ucallz team identified a significant unmet need in the US home services market –<br/> <br/>
+
+            A lack of designated contact center and workflow management solutions for small and medium  home service providers (plumbers, constructors,  electricians, locksmiths, appliance repairers, carpet cleaners, garage door repairers, exterminators, gardeners, etc.) Our partnership has unveiled amazing knowledge to identify the very changing industry, adapt and pass that experience to our customers and associates, Giving birth to our fantastic state fo the art platform.
         </p>
         <div class="group-1802">
             <a href="#">
@@ -56,7 +55,8 @@
         <div class="overlap-group6">
             <div class="testimonial poppins-normal-black-14px">TESTIMONIAL</div>
             <div class="you-get-more-than-what-you-pay-for poppins-medium-black-28px">
-                You get more than<br />what you pay for
+                We want your business to stride<br/>
+                and always succeed
             </div>
             <div class="overlap-group1">
                 <img class="rectangle-258" src="~/lib/img/rectangle-258-5@2x.png" />
