--- a/Uleadz.StaticWeb/Pages/Shared/_IndustriesLocksmith.cshtml
+++ b/Uleadz.StaticWeb/Pages/Shared/_IndustriesLocksmith.cshtml
@@ -10,19 +10,10 @@
                     </div>
                 </div>
                 <div class="flex-col-2">
-                    @*<div class="group-585 poppins-medium-hunter-green-16px">
-                            <div class="place">Home</div>
-                            <div class="why-uleadz">Why Uleadz</div>
-                            <div class="group-584">
-                                <div class="industries">Industries</div>
-                                <img class="line-42" src="~/lib/img/line-42-1@2x.svg" />
-                            </div>
-                            <div class="about-us">About Us</div>
-                            <div class="pricing">Pricing</div>
-                            <div class="place-1">Contact</div>
-                        </div>*@
+                 
                     <div class="if-you-work-with-mat poppins-medium-black-50px">
-                        If you work with materials and labour,<br />we work with you
+                        Service Industry Specialists<br/>
+                        this one is for you!
                     </div>
                     <p class="ideal-for-trades-and poppins-normal-black-15px">
                         Ideal for trades and service businesses with 1-50 employees, whether you’re<br />managing three jobs or
