--- a/Uleadz.StaticWeb/Pages/Shared/_IndustriesLocksmithMobile.cshtml
+++ b/Uleadz.StaticWeb/Pages/Shared/_IndustriesLocksmithMobile.cshtml
@@ -7,7 +7,8 @@
         <div class="group-container">
             <div class="group-1869">
                 <div class="if-you-work-with-mat poppins-semi-bold-black-34px">
-                    If you work with<br />materials and<br />labour, we work with<br />you
+                    Service Industry Specialists<br/>
+                    this one is for you!
                 </div>
                 <p class="ideal-for-trades-and poppins-normal-black-14px">
                     Ideal for trades and service businesses with 1-50<br />employees, whether you’re managing three jobs<br />or
