--- a/Uleadz.StaticWeb/Pages/Shared/_Pricing.cshtml
+++ b/Uleadz.StaticWeb/Pages/Shared/_Pricing.cshtml
@@ -187,7 +187,8 @@
                     <div class="flex-col-7">
                         <div class="testimonial poppins-normal-black-14px">TESTIMONIAL</div>
                         <div class="you-get-more-than-what-you-pay-for poppins-medium-black-50px">
-                            You get more than what<br />you pay for
+                            Get more, payless, succeed...<br/>
+                            Uleadz
                         </div>
                         <p class="we-will-take-care-of-everything-else poppins-normal-black-16px">
                             We will take care of everything else
@@ -289,7 +290,9 @@
                 <div class="group-572">
                     <div class="group-571">
                         <div class="we-have-defined-a-co valign-text-middle poppins-medium-hunter-green-36px">
-                            We have defined a collaborative<br />process with our clients. Let’s see if <br />we are a fit.
+                            We have defined a collaborative<br/>
+                            process with our clients. If you have any
+                            questions, let's clarify them together :
                         </div>
                         <img class="line-22" src="~/lib/img/line-22@2x.png" />
                         <div class="flex-row-5">
@@ -321,6 +324,28 @@
                                 </div>
                                 <div class="what-happens-if-i-go-over-my-plan poppins-medium-hunter-green-24px">
                                     What happens if I go over my plan?
+                                </div>
+                            </div>
+                            <div class="group-568">
+                                <div class="group-48">
+                                    <div class="line-container">
+                                        <img class="line-24" src="~/lib/img/line-23@2x.png" />
+                                        <img class="line-25" src="~/lib/img/line-25@2x.png" />
+                                    </div>
+                                </div>
+                                <div class="what-happens-if-i-go-over-my-plan poppins-medium-hunter-green-24px">
+                                    What is Joby?
+                                </div>
+                            </div>
+                            <div class="group-568">
+                                <div class="group-48">
+                                    <div class="line-container">
+                                        <img class="line-24" src="~/lib/img/line-23@2x.png" />
+                                        <img class="line-25" src="~/lib/img/line-25@2x.png" />
+                                    </div>
+                                </div>
+                                <div class="what-happens-if-i-go-over-my-plan poppins-medium-hunter-green-24px">
+                                    Can I use multiple devices at once?
                                 </div>
                             </div>
                         </div>
