--- a/Uleadz.StaticWeb/Pages/Shared/_PricingMobile.cshtml
+++ b/Uleadz.StaticWeb/Pages/Shared/_PricingMobile.cshtml
@@ -189,7 +189,8 @@
             <div class="overlap-group4">
                 <div class="testimonial poppins-normal-black-14px">TESTIMONIAL</div>
                 <div class="you-get-more-than-what-you-pay-for poppins-medium-black-28px">
-                    You get more than<br />what you pay for
+                    Get more, payless, succeed...<br/>
+                    Uleadz
                 </div>
                 <div class="overlap-group3-1">
                     <img class="rectangle-258" src="~/lib/img/rectangle-258-1@2x.png" />
@@ -236,8 +237,9 @@
             </div>
             <div class="overlap-group6">
                 <div class="we-have-defined-a-co poppins-medium-hunter-green-28px">
-                    We have defined a<br />collaborative process<br />with our clients. Let’s see<br />if&nbsp;&nbsp;we are a
-                    fit.
+                    We have defined a collaborative
+                    process with our clients. If you have any
+                    questions, let's clarify them together :
                 </div>
                 <img class="rectangle-223" src="~/lib/img/rectangle-223@2x.png" />
                 <div class="group-1800">
@@ -281,38 +283,7 @@
                     <div class="frame-4"><div class="book-a-demo poppins-normal-white-14px">Book a Demo</div></div>
                     </a>
             </div>
-            @*<div class="overlap-group5">
-                <div class="stay-ahead-of-the-ga poppins-normal-white-20px">
-                    <span class="poppins-normal-white-20px">Stay ahead of the game<br />with</span>
-                    <span class="span1-2 poppins-medium-white-28px">Uleadz Field<br />Management Software</span>
-                </div>
-                <div class="frame-16">
-                    <div class="contact-us valign-text-middle poppins-medium-white-18px">Contact Us</div>
-                </div>
-                <div class="group-container poppins-normal-white-16px">
-                    <div class="group-486">
-                        <div class="place-1 valign-text-middle">Home</div>
-                        <div class="why-uleadz valign-text-middle">Why Uleadz?</div>
-                        <div class="about-us valign-text-middle">About Us</div>
-                        <div class="place-2 valign-text-middle">Contact</div>
-                        <div class="pricing valign-text-middle">Pricing</div>
-                    </div>
-                    <div class="group-485">
-                        <div class="industries valign-text-middle">Industries</div>
-                        <div class="terms-of-use valign-text-middle">Terms of use</div>
-                        <div class="privacy-policy valign-text-middle">Privacy Policy</div>
-                        <div class="support valign-text-middle">Support</div>
-                    </div>
-                </div>
-                <div class="group-144">
-                    <div class="group-1759"><img class="group-143" src="~/lib/img/group-143-2@2x.png" /></div>
-                    <div class="group-1758"><img class="group" src="~/lib/img/group-3@2x.png" /></div>
-                    <div class="group-1757"><img class="vector" src="~/lib/img/vector@2x.png" /></div>
-                    <div class="group-1756"><img class="group-1755" src="~/lib/img/group-1755@2x.png" /></div>
-                </div>
-                <div class="hellouleadzcom valign-text-middle poppins-normal-white-16px">hello@uleadz.com</div>
-                <img class="uleadz1-1" src="~/lib/img/uleadz1-1-2@2x.png" />
-            </div>*@
+           
         </div>
     </div>
 </div>
