--- a/Uleadz.StaticWeb/Pages/Shared/Footer/_Footer.cshtml
+++ b/Uleadz.StaticWeb/Pages/Shared/Footer/_Footer.cshtml
@@ -15,6 +15,7 @@
                             </div>
                         </a>
                     </div>
+                    <div class="contact-links">
                     <div class="group-486">
                         <a href="/index">
                             <div class="place-2 valign-text-middle white">Home</div>
@@ -47,27 +48,31 @@
                                 <div class="support valign-text-middle white">Support</div>
                             </a>
                     </div>
-                    <div class="hellouleadzcom valign-text-middle">hello@uleadz.com</div>
-                    <div class="group-144">
-                        <a href="https://www.facebook.com/uleadzapp/">
-                            <div class="overlap-group3"><img class="group-143" src="~/lib/img/group-143@2x.svg" /></div>
-                        </a>
-                        <a href="https://www.instagram.com/uleadzapp/">
-                            <div class="overlap-group1-3"><img class="group" src="~/lib/img/group@2x.svg" /></div>
-                        </a>
-                        <a href="https://twitter.com/uleadz_ai">
-                            <div class="overlap-group2-1">
-                                <img class="twitter-logowine-1" src="~/lib/img/twitter-logo-wine-1@2x.svg" />
-                            </div>
-                        </a>
-                        <a href="https://www.youtube.com/channel/UCSe9X-1aMa3OolrVORdIaGw">
-                            <div class="overlap-group-5">
-                                <img class="you-tube-icon-almost-black-logowine-1"
-                                     src="~/lib/img/youtube-icon-almost-black-logo-wine-1@2x.svg" />
-                            </div>
-                        </a>
+                    <div class="footer-left">
+                        <img class="uleadz1-1" src="~/lib/img/uleadz1-1@2x.png" />
+                        <div class="hellouleadzcom valign-text-middle">hello@uleadz.com</div>
+                        <div class="group-144">
+                            <a href="https://www.facebook.com/uleadzapp/">
+                                <div class="overlap-group3"><img class="group-143" src="~/lib/img/group-143@2x.svg" /></div>
+                            </a>
+                            <a href="https://www.instagram.com/uleadzapp/">
+                                <div class="overlap-group1-3"><img class="group" src="~/lib/img/group@2x.svg" /></div>
+                            </a>
+                            <a href="https://twitter.com/uleadz_ai">
+                                <div class="overlap-group2-1">
+                                    <img class="twitter-logowine-1" src="~/lib/img/twitter-logo-wine-1@2x.svg" />
+                                </div>
+                            </a>
+                            <a href="https://www.youtube.com/channel/UCSe9X-1aMa3OolrVORdIaGw">
+                                <div class="overlap-group-5">
+                                    <img class="you-tube-icon-almost-black-logowine-1"
+                                         src="~/lib/img/youtube-icon-almost-black-logo-wine-1@2x.svg" />
+                                </div>
+                            </a>
+                        </div>
+
                     </div>
-                    <img class="uleadz1-1" src="~/lib/img/uleadz1-1@2x.png" />
+                    </div>
                 </div>
             </div>
         </div>
