--- a/Uleadz.StaticWeb/wwwroot/css/app/industries-locksmith.css
+++ b/Uleadz.StaticWeb/wwwroot/css/app/industries-locksmith.css
@@ -546,7 +546,7 @@
   border-radius: 25px;
   box-shadow: 0px 0px 82px #0000000d;
   height: 77px;
-  margin-left: 46.0px;
+/*  margin-left: 46.0px;*/
   margin-top: 93px;
   position: relative;
   width: 1140px;
@@ -570,6 +570,7 @@
   position: absolute;
   top: 26px;
   white-space: nowrap;
+  width:1000px;
 }
 
 .industries-locksmith .rectangle-copy-15 {
